<resources>
    <string name="app_name">BrindesZorro</string>
    <string name="etFormatoInvalido">Formato Invalido</string>
    <string name="etPasswordTextError">Password Invalida</string>
    <string name="txtUserName">Username:</string>
    <string name="txtPassword">Password:</string>
    <string name="btn_registar">REGISTAR</string>
    <string name="txtLogin">ENTRAR</string>
    <string name="loginInputEmail">a@a.a</string>
    <string name="loginInputPassword">12345678</string>
    <string name="tv_valorFatura">Valor da Fatura</string>
    <string name="tv_data_fatura">Data de Emissão:</string>
    <string name="tvPedirEmail">Email:</string>
    <string name="tvInsiraNome">Nome completo:</string>
    <string name="tvInsiraTelefone">Telefone:</string>
    <string name="textViewInsiraNIF">Insira o seu NIF:</string>
    <string name="textViewMorada">Insira a sua Morada:</string>
    <string name="textViewCodPostal">Codigo Postal:</string>
    <string name="textViewLocalidade">Localidade:</string>
    <string name="exemploEmail">exemplo@gmail.com</string>
    <string name="hintdescriptionLocalidade">Leiria</string>
    <string name="hintNomeBrindeszorro">Brindes Zorro</string>
    <string name="hintEmailBrindesZorro">brindes@zorro.pt</string>
    <string name="hintTelefone">987654321</string>
    <string name="hintMorada">Campus 2 – Morro do Lena</string>
    <string name="hintCodPostal">2411-901</string>
    <string name="textCancelar">Cancelar</string>
    <string name="textConfirmar">Confirmar</string>
    <string name="descriptionLogo">Imagem com logo da empresa</string>
    <string name="ndOpen">open\n</string>
    <string name="ndClose">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_estadoFatura">Estado da Fatura</string>
    <string name="nav_Home">Home</string>
    <string name="nav_carrinho">Carrinho de Compras</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_Servidor">Servidor</string>
    <string name="nav_Faturas">Faturas</string>
    <string name="nav_Pessoal">Área Pessoal</string>
    <string name="nav_avaliacoes">Avaliações</string>
    <string name="tvInsiraUser">Username</string>
    <string name="hint_userName">Insira o seu Username</string>
    <string name="hint_userEmail">Insira o seu Email</string>
    <string name="textRecuperar">Recuperar</string>
    <string name="tv_TituloNomeArtigo">Artigo:</string>
    <string name="tv_ValorTitulo">Valor Unitário</string>
    <string name="tv_valorEuros">€</string>
    <string name="tv_Qtd">Qtd.</string>
    <string name="tv_ValorT">Valor Total:</string>
    <string name="tv_AdcCar">Adicionar ao carrinho</string>
    <string name="tv_servidorNome">Servidor</string>
    <string name="tv_portaTitulo">Porta:</string>
    <string name="tv_ipTitulo" />
    <string name="tv_tituloIp">IP:</string>
    <string name="hint_porta">Insira o nº da Porta</string>
    <string name="hint_ip">Insira o IP</string>
    <string name="tv_dominioTitulo">Domínio</string>
    <string name="hint_dominio">Insira o Domínio</string>
    <string name="btn_Confirmar">Confirmar</string>
    <string name="idValorTotalCarrinho">Valor Total</string>
    <string name="txtValorUnitarioCarrinho">Valor Unitario</string>
    <string name="txtPrecoValorCarrinho">€</string>
    <string name="txtQtd">Qtd.</string>
    <string name="txtNumeroQtd" />
    <string name="txtPrecoTotalArtigo">€</string>
    <string name="txtValorTotalArtigoCarrinho">"Valor total "</string>
    <string name="txtButtonMenosArtigoCarrinho">-</string>
    <string name="txtButtonMaisArtigoCarrinho">+</string>/>
    <string name="tvNomeRegistar">Nome Completo:</string>
    <string name="txtQuantidadeArtigo">Quantidade:</string>
    <string name="txtValorArtigo">"Preço: "</string>
    <string name="txtReferenciaArtigo">Referencia:</string>
    <string name="txtPasswordAtual">Insira a sua Password Atual:</string>
    <string name="alterarPasswordInput">12345678</string>
    <string name="txtNovaPassword">Insira a nova Password:</string>
    <string name="novaPasswordInput">12345678</string>
    <string name="tvConfirmarPassword">Confirme a nova Password:</string>
    <string name="navAlterarDados">Alterar Dados</string>
    <string name="navAlterarPassword">Alterar Password</string>
    <string name="navLogout">Logout</string>/>
    <string name="txtPesquisarMenu">Pesquisar</string>
    <string name="tv_idFatura">Numero da Fatura</string>
    <string name="txtEmailRegistar">Email:</string>
    <string name="txtMenos">-</string>
    <string name="txtConfirmarDados">Confime os seus dados:</string>
    <string name="txtNif">NIF:</string>
    <string name="txtMorada">Morada:</string>
    <string name="txtMBWay">MB Way</string>
    <string name="txtMultibanco">Multibanco</string>
    <string name="txtTransferencia">Transferência</string>/>
    <string name="ivLogoCarrinho">Csrrinho Compras</string>
    <string name="buttonLimparCarrinho">Limpar Carrinho</string>
    <string name="buttonConcluirCompra">Concluir Compra</string>
    <string name="txtValorTotalCarrinho">Valor Total s/ IVA: </string>
    <string name="buttonLimparFavoritos">Limpar Favoritos</string>
    <string name="buttonAdicionarTodosCarrinho">Adicionar todos ao Carrinho</string>
    <string name="txtNomeArtigoAvaliacaoComentario">Artigo</string>
    <string name="ivArtigoAvaliacaoComentario">Artigo</string>
    <string name="txtReferenciaArtigoAvaliacaoComentario">Referência</string>
    <string name="txtDesignacaoArtigoAvaliacaoComentario">Designação</string>
    <string name="txtPreçoArtigoAvaliacaoComentario">Preço</string>
    <string name="tvMostrarReferenciaArtigoAvaliacaoComentario">ABC123</string>
    <string name="tvMostrarDesignacaoArtigoAvaliacaoComentario">Porta-chaves</string>
    <string name="tvMostrarPrecoArtigoAvaliacaoComentario">5.50€</string>
    <string name="txtClassificacaoArtigoAvaliacaoComentario">Classificação</string>
    <string name="txtComentarioArtigoAvaliacaoComentario">Comentário</string>
    <string name="buttonEnviarComentarioAvaliacaoComentario">Enviar</string>
    <string name="buttonLogout">Logout</string>
    <string name="txtHorizontalScrollHome">Horizontal Scroll Home</string>
    <string name="tv_lvNomeArtigoAvaliacao">Nome do artigo:</string>
    <string name="tv_lvComentarioAvaliacao">Comentário:</string>
    <string name="tv_lvClassificacaoAvaliacao">Classificação:</string>
    <string name="sem_liga_a_internet">Sem Ligação a internet</string>/>
    <string name="txtAdicionarAoCarrinho">Adicionar ao Carrinho</string>
    <string name="txtFavoritosDetalhesArtigo">Adicionar aos Favoritos</string>
    <string name="registo_com_sucesso">Registo com sucesso</string>/>
    <string name="tv_AdcFav" />
    <string name="tv_Rmv_Fav">Remover dos Favoritos</string>
    <string name="username_e_ou_password_incorreto">Username e/ou password incorreto.</string>/>
    <string name="tv_Prc_Artigo">Valor do Artigo</string>
    <string name="icnHome">Home</string>
    <string name="icnFavoritos">Favoritos</string>
    <string name="icnCarTitle">Carrinho</string>
    <string name="cliente">cliente</string>
    <string name="teste123">teste123</string>
    <string name="nome">Nome:</string>
    <string name="strAlterarPassword">Alterar Password</string>
    <string name="onClickLimparCarrinho">onClickLimparCarrinho</string>
    <string name="zero">0 €</string>
    <string name="ipServidor">http://172.22.21.219:8080/api/</string>
    <string name="btn_pagar">PAGAR</string>
    <string name="tvEmpresaMoradaStr">Morada</string>
    <string name="tv_Artigos_list">ARTIGOS</string>
    <string name="tv_IvaTotal">Iva Total</string>
    <string name="tv_DataFatura">Data Emissão:</string>
    <string name="txtQuantidadeArtigoFaturaDetalhes">Quantidade</string>
    <string name="txtIvaTotalDetalhesFatura">Iva Total:</string>
    <string name="btn_avaliarArtigo">AVALIAR ARTIGO</string>
    <string name="Insira_classificacao">Insira a sua Classificação: </string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!</string>
    <string name="password_atual_deve_conter_no_minimo_8_caracteres">Password atual deve conter no minimo 8 caracteres!</string>
    <string name="nova_password_deve_conter_no_minimo_8_caracteres">Nova password deve conter no minimo 8 caracteres!</string>
    <string name="as_password_n_o_coincidem">As password não coincidem</string>
    <string name="nova_password_deve_ser_diferente_da_atual">Nova password deve ser diferente da atual!</string>
    <string name="deixe_um_coment_rio_antes_de_enviar">Deixe um comentário antes de enviar</string>
    <string name="atribua_uma_pontua_o_antes_de_enviar">Atribua uma pontuação antes de enviar</string>
    <string name="coment_rio_n_o_pode_ter_menos_de_4_caracteres">Comentário não pode ter menos de 4 caracteres!</string>
    <string name="a_quantidade_n_o_pode_ser_inferior_a_1">A quantidade não pode ser inferior a 1.</string>
    <string name="quantidade_m_xima_de_stock_selecionada">Quantidade máxima de stock selecionada.</string>
    <string name="nif_dever_conter_9_caracteres">Nif deverá conter 9 caracteres</string>
    <string name="telemovel_dever_conter_9_caracteres">Telemovel deverá conter 9 caracteres</string>
    <string name="morada_inv_lida">Morada inválida</string>
    <string name="formato_de_c_digo_postal_inv_lido">Formato de código postal inválido (____-___)</string>
    <string name="localidade_inv_lida">Localidade inválida</string>
    <string name="fa_a_login">"Faça login "</string>
    <string name="preencha_o_email">Preencha o email</string>
    <string name="email_invalido">Email invalido</string>
    <string name="email_em_formato_inv_lido">Email em formato inválido</string>
    <string name="username_inv_lido">Username inválido</string>
    <string name="nome_inv_lido">Nome inválido</string>
    <string name="password_deve_conter_min_8_caracteres">Password deve conter min 8 caracteres</string>
    <string name="nif_dever_conter_9_digitos">Nif deverá conter 9 digitos</string>
    <string name="telefone_dever_conter_9_digitos">Telefone deverá conter 9 digitos</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="img_artigo">Imagem do Artigo</string>
    <string name="OBTER">OBTER</string>
    <string name="oral">Oral</string>
    <string name="oraltitulo">Nº 2220907, Apelido Coelho</string>
    />
</resources>